<resources>
    <!-- Cadenas por defecto -->
    <string name="app_name">Parcial 2</string>
    <string name="saveLabel">Guardar</string>

    <string name="author">Nicolas Rosero Correal</string>
    <string name="startLabel">Comienza</string>
    <string name="registerLabel">Registrate</string>
    <string name="loginLabel">Ingresar</string>
    <string name="resetPasswordLabel">Recupera tu contraseña</string>
    <string name="welcomeText">Inicia una nueva aventura con Parcial 2 y descubre una nueva forma de ver el mundo.</string>
    <string name="loginText">La aventura esta por iniciar, por favor inicia sesión</string>
    <string name="imgIconDesc">Icon imagen</string>
    <string name="imgLoginDesc">Imagen de credenciales</string>
    <string name="inputUserNameLabel">Usuario</string>
    <string name="inputUserPasswordLabel">Contraseña</string>
    <string name="loginWithGoogle">Ingresa con Google</string>
    <string name="registerMessage">Completa el formulario para registrate</string>
    <string name="noAccount">¿No tienes cuenta?</string>
    <string name="returnLabel">Regresar</string>
    <string name="editLabel" >Editar</string>

    <!-- Cadenas para el formulario de registro -->
    <string name="inputNameString">Nombres</string>
    <string name="inputLastNameString">Apellidos</string>
    <string name="inputEmailString">Correo institucional</string>
    <string name="inputPhoneString">Teléfono</string>
    <string name="inputAcademicProgram">Programa académico</string>
    <string name="inputSemester">Semestre</string>
    <string name="inputPasswordString">Contraseña</string>
    <string name="inputConfirmPasswordString">Confirmar contraseña</string>
    <string name="checkTermsAndConditionsString">Acepta términos y condiciones</string>
    <string name="btnCreateNewUserString">Registrar</string>
    <string name="hasAlreadyAccountString">¿Ya estás registrado?</string>
    <string name="goToLoginFromRegistryString">Iniciar sesión</string>

    <!-- Cadenas para el formulario de recuperacion de contrasena -->
    <string name="resetPasswordMessage">Ingresa tu correo electronico para recuperar tu contraseña</string>
    <string name="btnResetPassword">Recuperar contraseña</string>

    <!-- Cadenas de texto para el nav header -->
    <string name="welcomeLabel">Bienvenido</string>

    <!-- Textos para los fragments -->
    <string name="homeLabelFragment">Inicio</string>
    <string name="productsLabelFragment">Productos</string>
    <string name="open_drawer">Menú abierto</string>
    <string name="close_drawer">Menú cerrado</string>

    <!-- Cadenas de texto para el template de productos -->
    <string name="titleProducts">Productos</string>
    <string name="nameProductSample">Nombre producto</string>
    <string name="descProductSample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod dui sit amet accumsan faucibus. Mauris accumsan, erat nec pretium mattis, enim tortor semper felis, in interdum enim nisl sed metus</string>
    <string name="priceLabel">Precio: </string>
    <string name="valuePriceSample">$1000.00</string>
    <string name="quantityDispLabel">Unidades: </string>
    <string name="quantitySample">10 disp.</string>

    <!-- Cadenas para el carrito de compras -->
    <string name="titleShoppingCar">Carrito</string>
    <string name="totalPriceInCarLabel">Total: </string>
    <string name="totalPriceInCar">$2000.00</string>
    <string name="totalProductsInCarLabel">Productos: </string>
    <string name="totalProductsInCar">2</string>
    <string name="totalQuantityInCarLabel">Cantidad: </string>
    <string name="totalQuantityInCar">1</string>
    <string name="subtotalInCarlabel">Subtotal: </string>
    <string name="subtotalInCar">$1000.00</string>
    <string name="buyNowInCar">Comprar</string>

    <!-- Cadenas para el fragment de inicio -->
    <string name="welcomeTitleHome">Bienvenido a Parcial 2</string>
    <string name="welcomeMsgHome">¡Aquí encontrarás todo lo que estás buscando!</string>

    <!-- Cadenas para el listado del menú -->
    <string name="homeLabelOptionMenu">Inicio</string>
    <string name="perfilLabelOptionMenu">Mis datos</string>
    <string name="productsLabelOptionMenu">Productos</string>
    <string name="categoriesLabelOptionMenu">Categorías</string>
    <string name="shoppingCarLabelOptionMenu">Carrito</string>
    <string name="analysisLabelOptionMenu">Análisis</string>
    <string name="historyLabelOptionMenu">Histórico</string>

    <!-- Cadenas para las categorías -->
    <string name="titleCategories">Categorías</string>
    <string name="addToShoppingCarPlus">+</string>
    <string name="foodCategoryDescImg">Alimentación</string>
    <string name="technologyCategoryDescImg">Tecnología</string>
    <string name="clothesCategoryDescImg">Ropa</string>
    <string name="toysCategoryDescImg">Jugetería</string>
    <string name="electricalCategoryDescImg">Electrodomésticos</string>
    <string name="homeCategoryDescImg">Hogar</string>
    <string name="sportsCategoryDescImg">Deportes</string>
    <string name="accessoriesCategoryDescImg">Accesorios</string>
    <string name="productsQuantityInCategoryLabel">Productos disponibles: 10</string>

    <!-- Strings para el formulario de analysis_fragment.xml -->
    <string name="titleFormElectricalConsume">Consumo eléctrico</string>
    <string name="appliance">Electrodoméstico</string>
    <string name="hoursOfDailyUse">Horas de uso al día</string>
    <string name="powerAppliance">Potencia (W)</string>
    <string name="electricCost">Tarifa eléctrica</string>
    <string name="calculeElectricalCostBtnLabel">Calcular</string>
    
    <!-- Strings para el histórico -->
    <string name="titleHistory">Histórico</string>
    <string name="dailyConsumeLabel">Consumo diarío: </string>
    <string name="monthlyConsume">Consumo mensual: </string>
    <string name="totalElectricalCost">Costo mensual: </string>
</resources>