<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/nav_graph"
  app:startDestination="@id/homeFragmentOption">

  <fragment
    android:id="@+id/homeFragmentOption"
    android:name="com.example.waspp.fragments.HomeFragment"
    android:label="@string/homeLabelOptionMenu"
    app:defaultNavHost="true" />

  <fragment
    android:id="@+id/perfilFragmentOption"
    android:name="com.example.waspp.fragments.ViewPerfilFragment"
    android:label="@string/perfilLabelOptionMenu" />

  <fragment
    android:id="@+id/perfilEditFragmentOption"
    android:name="com.example.waspp.fragments.EditPerfilFragment"
    android:label="@string/categoriesLabelOptionMenu" />

  <fragment
    android:id="@+id/productsFragmentOption"
    android:name="com.example.waspp.fragments.ProductsFragment"
    android:label="@string/productsLabelOptionMenu" />

  <fragment
    android:id="@+id/categoriesFragmentOption"
    android:name="com.example.waspp.fragments.CategoriesFragment"
    android:label="@string/categoriesLabelOptionMenu" />

  <fragment
    android:id="@+id/shoppingCarFragmentOption"
    android:name="com.example.waspp.fragments.ShoppingCarFragment"
    android:label="@string/shoppingCarLabelOptionMenu" />

  <fragment
    android:id="@+id/homeCategoryFragmentOption"
    android:name="com.example.waspp.fragments.HomeCategoryFragment"
    android:label="@string/homeCategoryDescImg" />

  <fragment
    android:id="@+id/clothesCategoryFragmentOption"
    android:name="com.example.waspp.fragments.ClothesCategoryFragment"
    android:label="@string/clothesCategoryDescImg" />

  <fragment
    android:id="@+id/technologyCategoryFragmentOption"
    android:name="com.example.waspp.fragments.TechnologyCategoryFragment"
    android:label="@string/technologyCategoryDescImg" />

  <fragment
    android:id="@+id/sportsCategoryFragmentOption"
    android:name="com.example.waspp.fragments.SportsCategoryFragment"
    android:label="@string/sportsCategoryDescImg" />

  <fragment
    android:id="@+id/accessoriesCategoryFragmentOption"
    android:name="com.example.waspp.fragments.AccessoriesCategoryFragment"
    android:label="@string/accessoriesCategoryDescImg" />

</navigation>