<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/homeFragmentOption"
      android:title="@string/homeLabelOptionMenu" />

    <item
      android:id="@+id/perfilFragmentOption"
      android:title="@string/perfilLabelOptionMenu" />

    <item
      android:id="@+id/analysisFragmentOption"
      android:title="@string/analysisLabelOptionMenu" />

    <item
      android:id="@+id/historyFragmentOption"
      android:title="@string/historyLabelOptionMenu" />

<!--    <item-->
<!--      android:id="@+id/productsFragmentOption"-->
<!--      android:title="@string/productsLabelOptionMenu" />-->

<!--    <item-->
<!--      android:id="@+id/categoriesFragmentOption"-->
<!--      android:title="@string/categoriesLabelOptionMenu" />-->

<!--    <item-->
<!--      android:id="@+id/shoppingCarFragmentOption"-->
<!--      android:title="@string/shoppingCarLabelOptionMenu" />-->
  </group>
</menu>