<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  android:background="@color/black"
  android:id="@+id/viewPerfilFragmentFile">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
      android:id="@+id/photoPerfilImgView"
      android:layout_width="178dp"
      android:layout_height="209dp"
      android:contentDescription="@string/imgIconDesc"
      android:rotation="90"
      android:src="@drawable/img_perfil" />

    <EditText
      android:id="@+id/inputUserNamePerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:enabled="false"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/inputNameString"
      android:inputType="text" />

    <EditText
      android:id="@+id/inputUserLastNamePerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:enabled="false"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/inputLastNameString"
      android:inputType="text" />

    <EditText
      android:id="@+id/inputUserEmailPerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:enabled="false"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/inputEmailString"
      android:inputType="textEmailAddress" />

    <EditText
      android:id="@+id/inputUserPhonePerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:enabled="false"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/inputPhoneString"
      android:inputType="phone" />

    <EditText
      android:id="@+id/inputUserAcademicProgramPerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:inputType="text"
      android:hint="@string/inputAcademicProgram"
      android:enabled="false"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp" />

    <EditText
      android:id="@+id/inputUserSemesterPerfilView"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:inputType="number"
      android:hint="@string/inputSemester"
      android:enabled="false"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp" />

    <Button
      android:id="@+id/btnEditInfoUserView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:fontFamily="@font/adlam_display"
      android:text="@string/editLabel"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"/>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>