<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  android:id="@+id/loginActivity"
  tools:context=".LoginActivity">

  <ImageView
    android:id="@+id/imageViewIconL"
    android:layout_width="130dp"
    android:layout_height="135dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:contentDescription="@string/imgIconDesc"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/main_icon" />

  <TextView
    android:id="@+id/textViewAppNameL"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="44dp"
    android:fontFamily="@font/adlam_display"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="40sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textViewLogin"
    android:layout_width="271dp"
    android:layout_height="45dp"
    android:layout_marginTop="180dp"
    android:fontFamily="@font/adlam_display"
    android:text="@string/loginText"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/imageViewCredentials"
    android:layout_width="102dp"
    android:layout_height="156dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="284dp"
    android:contentDescription="@string/imgLoginDesc"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/user_password" />

  <EditText
    android:id="@+id/inputEmailLogin"
    style="@style/editTextRounded"
    android:layout_width="237dp"
    android:layout_height="45dp"
    android:layout_marginTop="292dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:hint="@string/inputEmailString"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.787"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="Autofill,LabelFor" />

  <EditText
    android:id="@+id/inputPasswordLogin"
    style="@style/editTextRounded"
    android:layout_width="237dp"
    android:layout_height="47dp"
    android:layout_marginTop="44dp"
    android:ems="10"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:hint="@string/inputPasswordString"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.787"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin"
    tools:ignore="Autofill,LabelFor" />

  <Button
    android:id="@+id/buttonLogin"
    android:layout_width="200dp"
    android:layout_height="47dp"
    android:layout_marginBottom="220dp"
    android:fontFamily="@font/adlam_display"
    android:text="@string/loginLabel"
    android:textAlignment="center"
    android:backgroundTint="@color/white"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/textViewResetPassword"
    android:layout_width="203dp"
    android:layout_height="26dp"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/adlam_display"
    android:text="@string/resetPasswordLabel"
    android:textAlignment="center"
    android:textColor="@color/mainColor"
    android:textSize="16sp"
    android:onClick="goToResetPasswordActivity"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.504"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

  <Button
    android:id="@+id/buttonLoginGoogle"
    android:layout_width="325dp"
    android:layout_height="53dp"
    android:layout_marginTop="48dp"
    android:backgroundTint="@color/white"
    android:fontFamily="@font/adlam_display"
    android:text="@string/loginWithGoogle"
    android:textAlignment="textEnd"
    android:textColor="@color/black"
    android:textSize="20sp"
    app:icon="@drawable/google_icon"
    app:iconSize="30dp"
    app:iconTint="@null"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.488"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword" />

  <TextView
    android:id="@+id/textViewNoAccount"
    android:layout_width="158dp"
    android:layout_height="18dp"
    android:layout_marginStart="80dp"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/adlam_display"
    android:text="@string/noAccount"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogle" />

  <TextView
    android:id="@+id/textViewEnter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/adlam_display"
    android:onClick="goToRegisterActivity"
    android:text="@string/registerLabel"
    android:textAllCaps="false"
    android:textColor="@color/mainColor"
    android:textSize="15sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.14"
    app:layout_constraintStart_toEndOf="@+id/textViewNoAccount"
    app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogle" />
</androidx.constraintlayout.widget.ConstraintLayout>