<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  android:id="@+id/analysisFragmentFile">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
      android:id="@+id/titleElectricalConsume"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/adlam_display"
      android:text="@string/titleFormElectricalConsume"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="24sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/inputNameAppliance"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/appliance"
      android:inputType="text" />

    <EditText
      android:id="@+id/inputHoursOfDailyUse"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/hoursOfDailyUse"
      android:inputType="number" />

    <EditText
      android:id="@+id/inputPowerAppliance"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/powerAppliance"
      android:inputType="number" />

    <EditText
      android:id="@+id/inputElectricalCost"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="7dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:hint="@string/electricCost"
      android:inputType="number" />

    <Button
      android:id="@+id/btnCalculateElectricaCost"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:fontFamily="@font/adlam_display"
      android:text="@string/calculeElectricalCostBtnLabel"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>