<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/resetPasswordActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  tools:context=".ResetPasswordActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
      android:id="@+id/imgIconResetPasswordView"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:contentDescription="@string/imgIconDesc"
      android:src="@drawable/main_icon" />

    <TextView
      android:id="@+id/textViewRegisterMsg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/adlam_display"
      android:text="@string/resetPasswordMessage"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="20dp"/>

    <EditText
      android:id="@+id/inputUserEmailResetP"
      style="@style/editTextRounded"
      android:layout_width="match_parent"
      android:layout_height="52dp"
      android:ems="10"
      android:fontFamily="@font/adlam_display"
      android:inputType="textEmailAddress"
      android:hint="@string/inputEmailString"
      android:layout_marginTop="7dp"
      android:layout_marginBottom="7dp" />

    <Button
      android:id="@+id/btnResetPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:fontFamily="@font/adlam_display"
      android:text="@string/btnResetPassword"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"/>

    <TextView
      android:id="@+id/textViewReturnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/adlam_display"
      android:text="@string/returnLabel"
      android:textAlignment="center"
      android:textColor="@color/mainColor"
      android:textSize="14.5sp"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="20dp"
      android:onClick="returnToLogin" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>