<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splashActivity"
    android:background="@color/black"
    tools:context=".activities.SplashActivity">

    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="308dp"
        android:layout_height="345dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/imgIconDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_icon" />

    <TextView
        android:id="@+id/textViewNameAppSplash"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashIcon"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="201dp"
        android:layout_height="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/author"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>